@@ -1,6 +1,0 @@
-SUBDIRS = UML diagram tree ui misc
-
-gaphordir = $(pythondir)/$(subdir)
-
-gaphor_PYTHON = gaphor.py test-diagram.py
-
