@@ -1,0 +1,1 @@
+GAPHOR_VERSION='@VERSION@'
