@@ -1,9 +1,0 @@
-
-diagramdir = $(pythondir)/$(subdir)
-
-diagram_PYTHON = \
-	__init__.py	\
-	diagram.py	\
-	metaitem.py
-
-CLEANFILES = *.pyc *.pyo
