@@ -1,14 +1,0 @@
-
-miscdir = $(pythondir)/$(subdir)
-
-misc_PYTHON = \
-	__init__.py	\
-	singleton.py	\
-	command.py	\
-	gaphorerror.py	\
-	signal.py	\
-	storage-libxml2.py \
-	storage-minidom.py \
-	storage.py
-
-CLEANFILES = *.pyc *.pyo
