@@ -1,14 +1,0 @@
-
-SUBDIRS = command
-
-uidir = $(pythondir)/$(subdir)
-
-ui_PYTHON = \
-	__init__.py	\
-	namespace.py	\
-	diagramview.py	\
-	placementtool.py	\
-	treeview.py
-
-CLEANFILES = *.pyc *.pyo
-
