@@ -1,3 +1,4 @@
 __all__ = [ 'command', 'namespace' ]
+from mainwindow import *
 from diagramview import *
 from treeview import *
