@@ -1,11 +1,0 @@
-
-commanddir = $(pythondir)/$(subdir)
-
-command_PYTHON = \
-	__init__.py	\
-	about.py	\
-	loadsabe.py	\
-	tree.py
-
-CLEANFILES = *.pyc *.pyo
-
