@@ -1,3 +1,10 @@
+2002-08-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/**/Makefile*: removed. Now only define the files needed in
+	the file Files. The root Makefile takes care of the rest.
+	* gaphor/config.py.in: New file. configure time configuration stuff is
+	put here.
+
 2002-08-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
 	* gaphor/diagram/*: Added association and package item
